# comfyui-musicflamingo

./: LICENSE  README.md  __init__.py  musicflamingo_analysis.py  pyproject.toml
.github/workflows/: publish.yml
example_workflow/: audio_musicflamingo_analyze.json
